--- a/public/style/style.css
+++ b/public/style/style.css
@@ -43,6 +43,26 @@ ul li:hover {
     background: #ddd;
 }
 
+ul li.checked {
+    background: #888;
+    color: #fff;
+    text-decoration: line-through;
+}
+
+/* Add a "checked" mark when clicked on */
+ul li.checked::before {
+    content: '';
+    position: absolute;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 10px;
+    left: 16px;
+    transform: rotate(45deg);
+    height: 15px;
+    width: 7px;
+}
+
 /* When clicked on, add a background color and strike out text */
 
 /* Style the close button */
@@ -102,4 +122,10 @@ input {
 
 .addBtn:hover {
     background-color: #bbb;
+}
+a.active {
+  text-decoration: none;
+    color: #333333;
+    pointer-events: none;
+    cursor: default;
 }
